--- a/src/app/main/main.component.html
+++ b/src/app/main/main.component.html
@@ -11,11 +11,11 @@
                 <!-- menu profile quick info -->
                 <div class="profile">
                     <div class="profile_pic">
-                        <img src="images/img.jpg" alt="..." class="img-circle profile_img">
+                        <img src="{{user.avatar}}" alt="..." class="img-circle profile_img">
                     </div>
                     <div class="profile_info">
                         <span>Welcome,</span>
-                        <h2>John Doe</h2>
+                        <h2>{{user.username}}</h2>
                     </div>
                 </div>
                 <!-- /menu profile quick info -->
@@ -156,7 +156,7 @@
                     <ul class="nav navbar-nav navbar-right">
                         <li class="">
                             <a href="javascript:;" class="user-profile dropdown-toggle" data-toggle="dropdown" aria-expanded="false">
-                    <img src="images/img.jpg" alt="">John Doe
+                    <img src="{{user.avatar}}" alt="">{{user.fullname}}
                     <span class=" fa fa-angle-down"></span>
                   </a>
                             <ul class="dropdown-menu dropdown-usermenu pull-right">
@@ -168,7 +168,7 @@
                       </a>
                                 </li>
                                 <li><a href="javascript:;">Help</a></li>
-                                <li><a href="login.html"><i class="fa fa-sign-out pull-right"></i> Log Out</a></li>
+                                <li><a herf="#" (click)="logout()"><i class="fa fa-sign-out pull-right"></i> Log Out</a></li>
                             </ul>
                         </li>
 
