--- a/src/app/main/main.component.html
+++ b/src/app/main/main.component.html
@@ -23,59 +23,50 @@
                 <br />
 
                 <!-- sidebar menu -->
+                <!-- sidebar menu -->
                 <div id="sidebar-menu" class="main_menu_side hidden-print main_menu">
                     <div class="menu_section">
                         <h3>General</h3>
                         <ul class="nav side-menu">
-                            <li><a><i class="fa fa-home"></i> Home <span class="fa fa-chevron-down"></span></a>
+                            <li><a><i class="fa fa-home"></i> Trang chủ</a>
+                            </li>
+                            <li><a><i class="fa fa-desktop"></i> Hệ thống <span class="fa fa-chevron-down"></span></a>
                                 <ul class="nav child_menu">
-                                    <li><a href="index.html">Dashboard</a></li>
-                                    <li><a href="index2.html">Dashboard2</a></li>
-                                    <li><a href="index3.html">Dashboard3</a></li>
+                                    <li><a routerLink="/main/role/index" routerLinkActive="active">Nhóm</a></li>
+                                    <li><a routerLink="/main/function/index" routerLinkActive="active">Chức năng</a></li>
+                                    <li><a routerLink="/main/user/index" routerLinkActive="active">Người dùng</a></li>
+                                    <li><a routerLink="/main/activity/index" routerLinkActive="active">Nhật ký</a></li>
+                                    <li><a routerLink="/main/error/index" routerLinkActive="active">Lỗi</a></li>
+                                    <li><a routerLink="/main/setting/index" routerLinkActive="active">Cấu hình</a></li>
                                 </ul>
                             </li>
-                            <li><a><i class="fa fa-edit"></i> Forms <span class="fa fa-chevron-down"></span></a>
+                            <li><a><i class="fa fa-chevron-down"></i> Sản phẩm <span class="fa fa-chevron-down"></span></a>
                                 <ul class="nav child_menu">
-                                    <li><a href="form.html">General Form</a></li>
-                                    <li><a href="form_advanced.html">Advanced Components</a></li>
-                                    <li><a href="form_validation.html">Form Validation</a></li>
-                                    <li><a href="form_wizards.html">Form Wizard</a></li>
-                                    <li><a href="form_upload.html">Form Upload</a></li>
-                                    <li><a href="form_buttons.html">Form Buttons</a></li>
+                                    <li><a routerLink="/main/product-category/index" routerLinkActive="active">Danh mục</a></li>
+                                    <li><a routerLink="/main/product/index" routerLinkActive="active">Sản phẩm</a></li>
+                                    <li><a routerLink="/main/order/index" routerLinkActive="active">Hóa đơn</a></li>
                                 </ul>
                             </li>
-                            <li><a><i class="fa fa-desktop"></i> UI Elements <span class="fa fa-chevron-down"></span></a>
+                            <li><a><i class="fa fa-table"></i> Nội dung <span class="fa fa-chevron-down"></span></a>
                                 <ul class="nav child_menu">
-                                    <li><a href="general_elements.html">General Elements</a></li>
-                                    <li><a href="media_gallery.html">Media Gallery</a></li>
-                                    <li><a href="typography.html">Typography</a></li>
-                                    <li><a href="icons.html">Icons</a></li>
-                                    <li><a href="glyphicons.html">Glyphicons</a></li>
-                                    <li><a href="widgets.html">Widgets</a></li>
-                                    <li><a href="invoice.html">Invoice</a></li>
-                                    <li><a href="inbox.html">Inbox</a></li>
-                                    <li><a href="calendar.html">Calendar</a></li>
+                                    <li><a routerLink="/main/post-category/index">Chuyên mục</a></li>
+                                    <li><a routerLink="/main/post/index">Tin bài</a></li>
                                 </ul>
                             </li>
-                            <li><a><i class="fa fa-table"></i> Tables <span class="fa fa-chevron-down"></span></a>
+                            <li><a><i class="fa fa-clone"></i> Tiện ích <span class="fa fa-chevron-down"></span></a>
                                 <ul class="nav child_menu">
-                                    <li><a href="tables.html">Tables</a></li>
-                                    <li><a href="tables_dynamic.html">Table Dynamic</a></li>
+                                    <li><a routerLink="/main/footer/index">Chân trang</a></li>
+                                    <li><a routerLink="/main/feedback/index">Phản hồi</a></li>
+                                    <li><a routerLink="/main/announement/index">Thông báo</a></li>
+                                    <li><a routerLink="/main/contact/index">Thông tin liên hệ</a></li>
                                 </ul>
                             </li>
-                            <li><a><i class="fa fa-bar-chart-o"></i> Data Presentation <span class="fa fa-chevron-down"></span></a>
+                            <li><a><i class="fa fa-bar-chart-o"></i>Báo cáo <span class="fa fa-chevron-down"></span></a>
                                 <ul class="nav child_menu">
-                                    <li><a href="chartjs.html">Chart JS</a></li>
-                                    <li><a href="chartjs2.html">Chart JS2</a></li>
-                                    <li><a href="morisjs.html">Moris JS</a></li>
-                                    <li><a href="echarts.html">ECharts</a></li>
-                                    <li><a href="other_charts.html">Other Charts</a></li>
-                                </ul>
-                            </li>
-                            <li><a><i class="fa fa-clone"></i>Layouts <span class="fa fa-chevron-down"></span></a>
-                                <ul class="nav child_menu">
-                                    <li><a href="fixed_sidebar.html">Fixed Sidebar</a></li>
-                                    <li><a href="fixed_footer.html">Fixed Footer</a></li>
+                                    <li><a routerLink="/main/revenue/index">Xuất báo cáo doanh thu</a></li>
+                                    <li><a routerLink="/main/visitor/index">Xuất báo cáo truy cập</a></li>
+                                    <li><a routerLink="/main/reader/index">Xuất báo cáo độc giả</a></li>
+
                                 </ul>
                             </li>
                         </ul>
@@ -124,6 +115,7 @@
                     </div>
 
                 </div>
+                <!-- /sidebar menu -->
                 <!-- /sidebar menu -->
 
                 <!-- /menu footer buttons -->
