--- a/src/app/main/role/role.component.html
+++ b/src/app/main/role/role.component.html
@@ -1,3 +1,105 @@
-<p>
-  role works!
-</p>
+<div class="right_col" role="main">
+  <div class="">
+    <div class="page-title">
+      <div class="title_left">
+        <h3>Danh sách quyền</h3>
+      </div>
+
+      <div class="title_right">
+        <div class="col-md-5 col-sm-5 col-xs-12 form-group pull-right top_search">
+          <div class="input-group">
+            <input type="text" class="form-control" name="filter" [(ngModel)]="filter" (ngModelChange)=loadData() placeholder="Search for...">
+          </div>
+        </div>
+      </div>
+    </div>
+
+    <div class="clearfix"></div>
+    <div class="row">
+      <div class="col-md-12 col-sm-12 col-xs-12">
+        <div class="x_panel">
+          <div class="x_title">
+            <h2>Danh sách quyền</h2>
+            <ul class="nav navbar-right panel_toolbox">
+              <li><a class="collapse-link"><i class="fa fa-chevron-up"></i></a>
+              </li>
+              <li class="dropdown">
+                <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-expanded="false"><i class="fa fa-wrench"></i></a>
+              </li>
+              <li><a class="close-link"><i class="fa fa-close"></i></a>
+              </li>
+            </ul>
+            <div class="clearfix"></div>
+          </div>
+          <div class="x_content">
+            <button class="btn btn-primary" (click)="showAddRole()"><i class="fa fa-plus"> &nbsp;Thêm mới</i></button>
+            <table class="table table-bordered">
+              <thead>
+                <tr>
+                  <th style="width:30%">Tên quyền</th>
+                  <th style="width:60%">Mô tả</th>
+                  <th style="width:10%"></th>
+                </tr>
+              </thead>
+              <tbody>
+                <tr *ngFor="let role of roles">
+                  <td>{{role.Name}}</td>
+                  <td>{{role.Description}}</td>
+                  <td>
+                    <button class="btn btn-primary" (click)="showEditRole(role.Id)"><i class="fa fa-pencil-square-o"></i></button>
+                    <button class="btn btn-danger"><i class="fa fa-trash" (click)="deleteRoleConfirm(role.Id)"></i></button>
+
+                  </td>
+                </tr>
+              </tbody>
+            </table>
+            <div class="col-md-12">
+              <pagination [boundaryLinks]="true" [itemsPerPage]="pageSize" (pageChanged)="pageChanged($event)" [totalItems]="totalRow"
+                [(ngModel)]="pageIndex" class="pagination-sm" previousText="&lsaquo;" nextText="&rsaquo;" firstText="&laquo;"
+                lastText="&raquo;"></pagination>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
+  </div>
+</div>
+<!--Modal add and edit-->
+<div bsModal #roleModal="bs-modal" class="modal fade" tabindex="-1" role="dialog" aria-labelledby="myLargeModalLabel" aria-hidden="true">
+  <div class="modal-dialog modal-lg">
+    <div class="modal-content">
+      <div class="modal-header">
+        <h4 class="modal-title pull-left">Thêm/Sửa Quyền</h4>
+        <button type="button" class="close pull-right" (click)="roleModal.hide()" aria-label="Close">
+          <span aria-hidden="true">&times;</span>
+        </button>
+      </div>
+      <div class="modal-body">
+        <form name="addEditRole" #fRole="ngForm" class="form-horizontal form-label-left" (ngSubmit)= "saveChanged()" novalidate>
+          <div class="form-group">
+            <label class="control-label col-md-3 col-sm-3 col-xs-12" >Tên quyền <span class="required">*</span>
+                        </label>
+            <div class="col-md-6 col-sm-6 col-xs-12">
+              <input type="text" name="Name" [(ngModel)] = "entity.Name" #Name = "ngModel" required class="form-control col-md-7 col-xs-12">
+            </div>
+          </div>
+          <div class="form-group">
+            <label class="control-label col-md-3 col-sm-3 col-xs-12">Mô tả <span class="required">*</span>
+                        </label>
+            <div class="col-md-6 col-sm-6 col-xs-12">
+              <input type="text" name="Description" required [(ngModel)]="entity.Description" #Description = "ngModel" class="form-control col-md-7 col-xs-12">
+            </div>
+          </div>          
+          <div class="ln_solid"></div>
+          <div class="form-group">
+            <div class="col-md-6 col-sm-6 col-xs-12 col-md-offset-3">
+              <button type="button" class="btn btn-primary" (click)="roleModal.hide()">Hủy</button>
+              <button type="submit" class="btn btn-success">Lưu</button>
+            </div>
+          </div>
+
+        </form>
+      </div>
+    </div>
+  </div>
+</div>
